# calendar-notes

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
design/: desktop-notes-ui.html
docs/: outlook-sync-implementation.md  ui-design-spec.md
src/: App.tsx  calendarMetadata.ts  lunar-javascript.d.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: outlook-com-sync.ps1
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  outlook_auth.rs  outlook_com_sync.rs  outlook_sync.rs  state.rs
